--- a/pages/PEC.html
+++ b/pages/PEC.html
@@ -14,47 +14,54 @@
 <div class="wrapper row1">
     <div id="header" class="clear" >
         <div class="fl_left">
-            <a href="http://quest.edu.pk" target="_blank"><img src="images/logo.png" style="padding:0px; height:100px;width:110px;margin:0px 0px -120px -70px;"></a>
-            <h1 style="margin-top:5px;margin-left:60px;"><a href="#">Computer Systems Engineering Department</a></h1>
-            <h2 style="margin-left:60px; margin-bottom:0px;">Quaid-e-awam University of Engineering, Science & Technology,</h2>
-            <h2 style="margin-left:60px;margin-bottom:0px;">Nawabshah-Pakistan</h2>
-
+            <img src="../images/header.png" style="padding:0px; height:20%;width:85%;margin-left:-3%">
         </div>
+
+        <div style="float:right;width:17%;margin-top:-2%;margin-right:-13%;">
+            <div class="a2a_kit a2a_kit_size_32 a2a_default_style">
+                <a class="a2a_button_facebook"></a>
+                <a class="a2a_button_twitter"></a>
+                <a class="a2a_button_google_plus">
+                    <a class="a2a_button_linkedin"></a>
+            </div>
+            <script async src="https://static.addtoany.com/menu/page.js"></script>
+        </div>
+
     </div>
 </div>
 <!-- ####################################################################################################### -->
-<div class="wrapper row2">
+<div class="wrapper row2" style="margin-top:-1%">
     <div class="main-navigation" style="line-height:14px;word-spacing:0px; width:765px;">
         <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="pages/faculty.html">Faculty</a></li>
+            <li><a href="../index.html">Home</a></li>
+            <li><a href="faculty.html">Faculty</a></li>
             <li><a href="#">Programs</a>
                 <ul>
-                    <li><a href="pages/B-courses.html">Bachelors</a>
+                    <li><a href="B-courses.html">Bachelors</a>
                     </li>
-                    <li><a href="pages/under-construction.html">Masters</a>
+                    <li><a href="under-construction.html">Masters</a>
                     </li>
-                    <li><a href="pages/under-construction.html">PhD</a>
+                    <li><a href="under-construction.html">PhD</a>
                     </li>
                 </ul>
             </li>
             <li><a href="#">Resources</a>
                 <ul>
-                    <li><a href="pages/lib.html">Library</a></li>
-                    <li><a href="pages/resourses.html">Labs</a></li>
-                    <li><a href="pages/under-construction.html">Downloads</a></li>
+                    <li><a href="lib.html">Library</a></li>
+                    <li><a href="resourses.html">Labs</a></li>
+                    <li><a href="under-construction.html">Downloads</a></li>
                 </ul>
             </li>
             <li><a href="#">Research Groups</a>
                 <ul>
-                    <li><a href="pages/under-construction.html">Computer Vision</a></li>
-                    <li><a href="pages/under-construction.html">Network Security</a></li>
-                    <li><a href="pages/under-construction.html">Wireless Sensor Network</a></li>
-                    <li><a href="pages/publications.html">Publications</a></li>
+                    <li><a href="CV.html">Computer Vision</a></li>
+                    <li><a href="NS.html">Network Security</a></li>
+                    <li><a href="WSN.html">Wireless Sensor Network</a></li>
+                    <li><a href="publications.html">Publications</a></li>
                 </ul>
             </li>
-            <li><a href="pages/PEC.html">PEC Accedreditation</a></li>
-            <li  class="last"><a href="pages/contact.html">Contact</a></li>
+            <li><a href="PEC.html">PEC Accreditation</a></li>
+            <li  class="last"><a href="contact.html">Contact</a></li>
         </ul>
         <div  class="clear"></div>
     </div>
@@ -69,7 +76,13 @@
     <!-- ####################################################################################################### -->
     <div id="content" style="width:100%;marign-left:10%;padding-bottom:10%">
       <img src="../images/pec.png" style="height:250px;">
-        <p align="justify" style="margin-left:30%;margin-top:-22%;font-size:110%;color:black;line-height:22px">Pakistan Engineering Council is well-known organization that includes registration of engineers and accreditation of engineering programs offered by many universities including QUEST. PEC ensures and manages the standards for engineering products and services. The council also encourages, facilitates and regulates working of professional engineering bodies for creativity and as custodians of engineering under the umbrella of the Council. Computer Systems Department is accredited form PEC up-to 2013 batch. While, PEC visit for the accreditation of current batches is due in month of October 2017.</p>
+        <p align="justify" style="margin-left:30%;margin-top:-22%;font-size:110%;color:black;line-height:22px">Pakistan Engineering Council (PEC) is a well-known organization that
+            registers engineers and accredits engineering programs offered by many universities in Pakistan
+            including QUEST. PEC ensures and manages the standards for engineering products and services. The
+            council also encourages, facilitates and regulates working of professional engineering bodies for
+            creativity and as custodians of engineering under the umbrella of the council. <br>
+            Computer Systems Department is accredited form PEC up to 2013 batch. While PEC's next visit for the accreditation of
+            current batches is due in the month of November 2017.</p>
 	</div>
 
 
